--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "prisma": "6.10.1",
     "qrcode": "^1.5.4",
     "telegraf": "^4.16.0",
-    "xstate": "^5.20.0"
+    "xstate": "^5.20.0",
+    "googleapis": "^133.0.0"
   },
   "devDependencies": {
     "@types/jest": "30.0.0",
