--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@prisma/client": "6.10.1",
     "baileys": "6.7.18",
     "dotenv": "^16.0.0",
+    "googleapis": "^133.0.0",
     "prisma": "6.10.1",
     "qrcode": "^1.5.4",
     "telegraf": "^4.16.0",
     "xstate": "^5.20.0",
-    "googleapis": "^133.0.0"
+    "zod": "^3.25.71"
   },
   "devDependencies": {
+    "@jest/globals": "^30.0.4",
     "@types/jest": "30.0.0",
     "@types/qrcode": "^1.5.5",
     "jest": "30.0.3",
