✨ Stage 6: Database persistence and restart safety
- Add Prisma schema with User, Barber, ConversationLog, Appointment models
- Implement database persistence replacing in-memory conversation storage
- Add conversation recovery on application startup
- Create comprehensive DatabaseService with conversation management
- Update barberAgent to use async database operations
- Add appointment creation and completion tracking
- Implement graceful shutdown handlers
- Add comprehensive persistence tests with crash simulation
- Update Docker configuration for database support

All tests passing (21/21) - application now survives container restarts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build: .
     environment:
       - NODE_ENV=development
+      - DATABASE_URL=mysql://root:root@mysql:3306/schedulink
     ports:
       - "3000:3000"
     depends_on:
